<resources>
    <string name="app_name">AndBox</string>
    <string name="file_create_success">file create success</string>
    <string name="console_clear">Console Clear</string>
    <string name="buffer_input_stream">BufferedInputStream </string>
    <string name="file_input_stream">FileInputStream</string>
    <string name="content">content</string>
    <string name="data_input_stream">DatInputStream</string>
    <string name="enter_something">enter something</string>
    <string name="byte_length">b.len</string>
    <string name="file_output_stream">FileOutputStream</string>
    <string name="print_stream">PrintStream</string>
    <string name="piped_input_output_stream">PipedInputStream / PipedOutputStream</string>
    <string name="hide_popup_window">hide popup window</string>
    <string name="show_popup_window">show popup window</string>
    <string name="object_output_stream">ObjectOutputStream</string>
    <string name="object_input_stream">ObjectInputStream</string>
    <string name="button_writer_reader">Writer / Reader / InputStreamReader</string>
    <string name="random_access_file">RandomAccessFile</string>
    <string name="next">Next</string>
</resources>
