<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3F41"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:hint="@string/enter_something" />

        <EditText
            android:id="@+id/edit_text_byte"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:background="#ffffff"
            android:gravity="center"
            android:hint="@string/byte_length"
            android:inputType="number" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_file_input_stream"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/file_input_stream"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_buffer_input_stream"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/buffer_input_stream"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/console_clear"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_data_input_stream"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/data_input_stream"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_file_output_stream"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#ffffff"
            android:text="@string/file_output_stream"
            android:textAllCaps="false" />

    </LinearLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tx_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:textColor="#ffffff" />

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

